force-app/main/default/objects/RE_Intraday_Pricing__c/RE_Intraday_Pricing__c.object-meta.xml
<CustomObject>
    <label>Direct List Pricing</label>
    <nameField>
        <displayFormat>IP-{0000000}</displayFormat>
        <label>Intraday Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direct List Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>