force-app/main/default/objects/RE_Intraday_Pricing__c/fields/RE_List_Price_Direct__c.field-meta.xml
<CustomField>
    <fullName>RE_List_Price_Direct__c</fullName>
    <label>List Price (Direct)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>