force-app/main/default/objects/RE_Intraday_Pricing__c/fields/RE_Location__c.field-meta.xml
<CustomField>
    <fullName>RE_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RE Location</label>
    <referenceTo>RE_Location__c</referenceTo>
    <relationshipLabel>Intraday Pricing</relationshipLabel>
    <relationshipName>Intraday_Pricing</relationshipName>
    <type>Lookup</type>
</CustomField>