force-app/main/default/objects/RE_Intraday_Pricing__c/fields/RE_Price_Change__c.field-meta.xml
<CustomField>
    <fullName>RE_Price_Change__c</fullName>
    <label>Price Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>