force-app/main/default/objects/RE_Intraday_Pricing__c/fields/RE_Relevant_Product__c.field-meta.xml
<CustomField>
    <fullName>RE_Relevant_Product__c</fullName>
    <label>Relevant Product</label>
    <length>250</length>
    <type>Text</type>
</CustomField>