force-app/main/default/objects/RE_Intraday_Pricing__c/recordTypes/Direct.recordType-meta.xml
<RecordType>
    <fullName>Direct</fullName>
    <active>true</active>
    <label>Direct</label>
</RecordType>