force-app/main/default/objects/RE_Intraday_Pricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RE_Price_Change__c</columns>
    <columns>RE_Location__c</columns>
    <columns>RE_Product__c</columns>
    <columns>RE_Relevant_Product__c</columns>
    <columns>RE_Valid_From__c</columns>
    <columns>RE_Valid_To__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Intraday_Pricing__c.Reseller</value>
    </filters>
    <label>All</label>
</ListView>