force-app/main/default/objects/RE_Intraday_Pricing__c/listViews/Direct.listView-meta.xml
<ListView>
    <fullName>Direct</fullName>
    <columns>NAME</columns>
    <columns>RE_Product__c</columns>
    <columns>RE_Relevant_Product__c</columns>
    <columns>RE_Valid_From__c</columns>
    <columns>RE_Valid_To__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>RE_Unit__c</columns>
    <columns>RE_List_Price_Direct__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Intraday_Pricing__c.Direct</value>
    </filters>
    <label>Direct</label>
</ListView>